--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 plugins {
     id 'com.lwohvye.java-conventions'
     //主要是定义了这个，定义了SpringBoot的Version相关，并提供了application, bootJar, bootBuildImage这些Task
-    id("org.springframework.boot") version "${springBootVersion}" apply false
+    alias(libs.plugins.spring.boot) apply false
     // 在parent root执行Task，会同步执行sub project的Task，比如执行了bootJar，那会执行subPro的bootJar(若其中没有该Task会ignore)
     id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
@@ -33,11 +33,6 @@ ext.sharedManifest = manifest {
     )
 } as DefaultManifest
 
-ext { // 这个定义是可以传递的
-    asmVersion = '9.5' // 这里单双引号都可以
-    lombokVersion = "1.18.29"
-}
-
 subprojects {
 
     apply plugin: "com.lwohvye.java-conventions"
@@ -50,12 +45,12 @@ subprojects {
     }
 
     dependencies {
-        implementation "org.ow2.asm:asm:${asmVersion}" // 这里必须双引号
-        coreCompCompileOnly "org.projectlombok:lombok:${lombokVersion}"
-        coreCompCompileOnly "org.mapstruct:mapstruct-processor:$mapstructVersion"
-        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-        annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
-        annotationProcessor "org.mapstruct.extensions.spring:mapstruct-spring-extensions:${mapstructSpringExtensionsVersion}"
+        implementation libs.asm
+        coreCompCompileOnly libs.lombok
+        coreCompCompileOnly libs.mapstruct.processor
+        annotationProcessor libs.lombok
+        annotationProcessor libs.mapstruct.processor
+        annotationProcessor libs.mapstruct.spring
     }
 
     tasks.withType(Javadoc).tap {
