--- a/unicorn-oauth2/federated-identity-authorizationserver/samples-federated-identity-authorizationserver.gradle
+++ b/unicorn-oauth2/federated-identity-authorizationserver/samples-federated-identity-authorizationserver.gradle
@@ -2,10 +2,10 @@ import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 dependencies {
     api platform(SpringBootPlugin.BOM_COORDINATES)
+    implementation libs.authorization.server
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
-    implementation "org.springframework.security:spring-security-oauth2-authorization-server:$springAuthorizationServerVersion"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-jdbc"
     implementation "org.webjars:webjars-locator-core"
