--- a/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
+++ b/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
@@ -2,13 +2,13 @@ import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 dependencies {
     implementation platform(SpringBootPlugin.BOM_COORDINATES)
+    implementation libs.authorization.server
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation "org.springframework.security:spring-security-oauth2-authorization-server:$springAuthorizationServerVersion"
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
