--- a/unicorn-core/build.gradle
+++ b/unicorn-core/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     api libs.yauaa
     api 'com.github.ben-manes.caffeine:caffeine'
     implementation libs.logback.encoder
+    api 'org.bouncycastle:bcpkix-jdk18on:1.72'
     api libs.thumbnailator
     api 'org.jetbrains:annotations:24.0.0'
     api 'io.vavr:vavr:0.10.4'
