--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -79,7 +79,7 @@ jobs:
         uses: github/codeql-action/init@v2
         with:
           # This means your workflow will download the latest stable CodeQL version instead of using the cache.
-          tools: latest
+          # tools: latest
           languages: ${{ matrix.language }}
           # If you wish to specify custom queries, you can do so here or in a config file.
           # By default, queries listed here will override any specified in a config file.
@@ -105,7 +105,7 @@ jobs:
       #   make bootstrap
       #   make release
       - name: Publish 2 MavenLocal
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v2.4.2
         with:
           arguments: publishToMavenLocal
 
@@ -114,6 +114,9 @@ jobs:
 #        with:
 #          arguments: build
 #          build-root-directory: unicorn-oauth2
+
+      - name: Build Unicorn-Starter
+        run: mvn -B package --file unicorn-starter/pom.xml -P prod
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
