--- a/valentine-starter/src/main/resources/config/application-prod.yml
+++ b/valentine-starter/src/main/resources/config/application-prod.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${DB_HOST:10.211.55.145}:${DB_PORT:4000}/${DB_NAME:unicorn}
     username: ${DB_USER:root}
-    password: ${DB_PWD:root}
+    password: ${DB_PWD:n0^9_MJUR1q+23VZ@7}
 
     hikari:
       ############################################################
