--- a/valentine-starter/src/main/resources/config/application.yml
+++ b/valentine-starter/src/main/resources/config/application.yml
@@ -27,8 +27,9 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        # dialect: org.hibernate.dialect.MySQLDialect
         enable_lazy_no_trans: true
+    database-platform: org.hibernate.dialect.TiDBDialect
     open-in-view: true
     hibernate:
       ddl-auto: none
