--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -31,7 +31,7 @@
 
     <properties>
         <java.version>20</java.version>
-        <project.core.version>4.0.0-epsilon</project.core.version>
+        <project.core.version>4.0.0-eta</project.core.version>
         <maven.compiler.release>20</maven.compiler.release>
         <lombok.version>1.18.26</lombok.version>
         <mapstruct.version>1.5.4.Final</mapstruct.version>
