--- a/settings.gradle
+++ b/settings.gradle
@@ -33,7 +33,7 @@ dependencyResolutionManagement {
             version('hutool', '5.8.15')
             version('ip2region', '3.0.4')
             version('jjwt', '0.11.5')
-            version('kotlin', '1.8.21')
+            version('kotlin', '1.9.0-Beta')
             version('kotlinxCoroutines', '1.7.0')
             version('log4jdbc', '1.18')
             version('logback', '1.4.6')
