--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'org.springframework.boot' // 通过引入这个，使该subModule有了相关的Task
-//    alias(libs.plugins.kotlin.jvm)
+    alias(libs.plugins.kotlin.jvm)
     // Apply GraalVM Native Image plugin
 //    id 'org.graalvm.buildtools.native' version '0.9.21'
 }
 
 ext {
-    kotlinEnable = false
+    kotlinEnable = true
 }
 
 dependencies {
@@ -55,7 +55,8 @@ if (kotlinEnable) {
     kotlin {
         sourceSets.configureEach {
             languageSettings {
-                languageVersion = "2.0"
+//                languageVersion = "2.0" // kotlin.experimental.tryK2=true
+
                 apiVersion = "2.0"
             }
         }
