--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -31,13 +31,13 @@
 
     <properties>
         <java.version>20</java.version>
-        <project.core.version>4.0.0-eta</project.core.version>
+        <project.core.version>4.0.0-iota</project.core.version>
         <maven.compiler.release>20</maven.compiler.release>
-        <lombok.version>1.18.26</lombok.version>
+        <lombok.version>1.18.28</lombok.version>
         <mapstruct.version>1.5.4.Final</mapstruct.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <shardingsphere.version>5.2.0</shardingsphere.version>
-        <kotlin.version>1.8.20</kotlin.version>
+        <kotlin.version>1.9.0-Beta</kotlin.version>
     </properties>
 
     <dependencies>
