--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 import org.gradle.api.java.archives.internal.DefaultManifest
 
+// 这种是legacy的configuration，但针对未publish到maven central的，还是要这种方式才行(dependencies部分)
 buildscript {
     repositories {
         gradlePluginPortal()
-        //Needed only for SNAPSHOT versions
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         // Should in hierarchy
         maven {
             name "extra-repo"
@@ -20,6 +19,8 @@ plugins {
     id 'com.lwohvye.java-conventions'
     //主要是定义了这个，定义了SpringBoot的Version相关，并提供了application, bootJar, bootBuildImage这些Task
     alias(libs.plugins.spring.boot) apply false
+    // This plugin simplifies the use of Lombok in Gradle
+    id "io.freefair.lombok" version "8.0.1" apply false
     // 在parent root执行Task，会同步执行sub project的Task，比如执行了bootJar，那会执行subPro的bootJar(若其中没有该Task会ignore)
     id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
@@ -37,6 +38,11 @@ subprojects {
 
     apply plugin: "com.lwohvye.java-conventions"
     apply plugin: "org.gradlex.extra-java-module-info"
+    apply plugin: "io.freefair.lombok"
+    // Setting a custom Lombok version when use plugin io.freefair.lombok
+    lombok {
+        version = "1.18.28"
+    }
 
     java {
         registerFeature('coreComp') {
@@ -46,9 +52,7 @@ subprojects {
 
     dependencies {
         implementation libs.asm
-        coreCompCompileOnly libs.lombok
         coreCompCompileOnly libs.mapstruct.processor
-        annotationProcessor libs.lombok
         annotationProcessor libs.mapstruct.processor
         annotationProcessor libs.mapstruct.spring
     }
