--- a/settings.gradle
+++ b/settings.gradle
@@ -38,7 +38,6 @@ dependencyResolutionManagement {
             version('log4jdbc', '1.18')
             version('logback', '1.4.6')
             version('logstash', '7.3')
-            version('lombok', "1.18.28")
             version('mapstruct', '1.5.5.Final')
             version('mapstructSpring', '1.0.1')
             version('oshiCore', '6.4.2')
@@ -58,6 +57,7 @@ dependencyResolutionManagement {
             plugin('kotlin-spring', 'org.jetbrains.kotlin.plugin.spring').versionRef('kotlin')
             // jpa插件 主要可以给JPA的一些注解类添加 无参构造函数
             plugin('kotlin-jpa', 'org.jetbrains.kotlin.plugin.jpa').versionRef('kotlin')
+            plugin('kotlin-lombok', 'org.jetbrains.kotlin.plugin.lombok').versionRef('kotlin')
 
             library('asm', 'org.ow2.asm', 'asm').versionRef('asm')
             library('authorization-server', 'org.springframework.security', 'spring-security-oauth2-authorization-server').versionRef('authorizationServer')
@@ -77,7 +77,6 @@ dependencyResolutionManagement {
             library('log4jdbc', 'com.lwohvye.log4jdbc-log4j2', 'log4jdbc-log4j2-jdbc4.1').versionRef('log4jdbc')
             library('logback-access', 'ch.qos.logback', 'logback-access').versionRef('logback')
             library('logback-encoder', 'net.logstash.logback', 'logstash-logback-encoder').versionRef('logstash')
-            library('lombok', 'org.projectlombok', 'lombok').versionRef('lombok')
             library('mapstruct', 'org.mapstruct', 'mapstruct').versionRef('mapstruct')
             library('mapstruct-processor', 'org.mapstruct', 'mapstruct-processor').versionRef('mapstruct')
             library('mapstruct-spring', 'org.mapstruct.extensions.spring', 'mapstruct-spring-extensions').versionRef('mapstructSpring')
