--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -3,6 +3,7 @@ plugins {
     alias(libs.plugins.kotlin.jvm)
     alias(libs.plugins.kotlin.spring)
     alias(libs.plugins.kotlin.jpa)
+    alias(libs.plugins.kotlin.lombok)
     // Apply GraalVM Native Image plugin
 //    id 'org.graalvm.buildtools.native' version '0.9.21'
 }
