--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -42,6 +42,40 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        # see: https://github.com/marketplace/actions/setup-java-jdk
+      - name: Setup Java JDK
+        uses: actions/setup-java@v3
+        with:
+          # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
+          java-version: '20'
+          # Java distribution. See the list of supported distributions in README file
+          distribution: 'oracle'
+          # The package type (jdk, jre, jdk+fx, jre+fx)
+          #java-package: # optional, default is jdk
+          # The architecture of the package
+          #architecture: # optional, default is x64
+          # Path to where the compressed JDK is located
+          #jdkFile: # optional
+          # Set this option if you want the action to check for the latest available version that satisfies the version spec
+          check-latest: true # optional
+          # ID of the distributionManagement repository in the pom.xml file. Default is `github`
+          #server-id: # optional, default is github
+          # Environment variable name for the username for authentication to the Apache Maven repository. Default is $GITHUB_ACTOR
+          #server-username: # optional, default is GITHUB_ACTOR
+          # Environment variable name for password or token for authentication to the Apache Maven repository. Default is $GITHUB_TOKEN
+          #server-password: # optional, default is GITHUB_TOKEN
+          # Path to where the settings.xml file will be written. Default is ~/.m2.
+          #settings-path: # optional
+          # Overwrite the settings.xml file if it exists. Default is "true".
+          #overwrite-settings: # optional, default is true
+          # GPG private key to import. Default is empty string.
+          #gpg-private-key: # optional
+          # Environment variable name for the GPG private key passphrase. Default is $GPG_PASSPHRASE.
+          #gpg-passphrase: # optional
+          # Name of the build platform to cache dependencies. It can be "maven" or "gradle".
+          #cache: 'maven' # optional
+          # Workaround to pass job status to post job step. This variable is not intended for manual setting
+          #job-status: # optional, default is ${{ job.status }}
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
