--- a/valentine-starter/src/main/resources/config/application-prod.yml
+++ b/valentine-starter/src/main/resources/config/application-prod.yml
@@ -156,3 +156,11 @@ aws:
     secretAccessKey: accessSecret
     bucketName: S3BucketName
     region: S3Region
+
+
+web:
+  cors-config:
+    white-list:
+      - https://*.lwohvye.com
+      - https://xxx.com
+      - http://localhost:[*]
