--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@
 #    limitations under the License.
 #
 springBootVersion=3.1.0
-kotlinVersion=1.9.0-Beta
+kotlinVersion=1.9.0-RC
 kotlin.experimental.tryK2=true
