try maven build unicorn-starter

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,3 +36,17 @@ jobs:
 #          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
         with:
           arguments: bootBuildImage
+
+      - name: Publish 2 MavenLocal
+        uses: gradle/gradle-build-action@v2.4.2
+        with:
+          arguments: publishToMavenLocal
+
+      - name: Build OAuth2.0 Module
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
+          build-root-directory: unicorn-oauth2
+
+      - name: Build Unicorn-Starter
+        run: mvn -B package --file unicorn-starter/pom.xml -P jigsaw
