--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -31,13 +31,13 @@
 
     <properties>
         <java.version>20</java.version>
-        <project.core.version>4.0.0-iota</project.core.version>
+        <project.core.version>4.0.1-lambda</project.core.version>
         <maven.compiler.release>20</maven.compiler.release>
         <lombok.version>1.18.28</lombok.version>
         <mapstruct.version>1.5.4.Final</mapstruct.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <shardingsphere.version>5.2.0</shardingsphere.version>
-        <kotlin.version>1.9.0-Beta</kotlin.version>
+        <kotlin.version>1.9.0-RC</kotlin.version>
     </properties>
 
     <dependencies>
@@ -56,13 +56,13 @@
         <!--   tools模块     -->
         <dependency>
             <groupId>com.lwohvye</groupId>
-            <artifactId>unicorn-tp-tools</artifactId>
+            <artifactId>unicorn-tp-tools-kotlin</artifactId>
             <version>${project.core.version}</version>
         </dependency>
         <!-- 代码生成模块 -->
         <dependency>
             <groupId>com.lwohvye</groupId>
-            <artifactId>unicorn-code-gen</artifactId>
+            <artifactId>unicorn-code-gen-kotlin</artifactId>
             <version>${project.core.version}</version>
         </dependency>
         <dependency>
