--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -97,11 +97,11 @@
         <!--Mockito's inline mock maker supports static mocks based on the Instrumentation API.
         You can simply enable this mock mode, by placing the 'mockito-inline' artifact where you are currently using 'mockito-core'.
         Note that Mockito's inline mock maker is not supported on Android.-->
-        <dependency>
+        <!-- <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
         <!--   kotlin is optional     -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
