--- a/unicorn-oauth2/samples-default-authorizationserver/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-default-authorizationserver/src/main/resources/application.yml
@@ -23,9 +23,9 @@ spring:
   #配置数据源
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-    username: ${DB_USER:root}
-    password: ${DB_PWD:root}
+    url: jdbc:mysql://${DB_HOST:10.211.55.145}:${DB_PORT:}/${DB_NAME:}
+    username: ${DB_USER:}
+    password: ${DB_PWD:}
 
     hikari:
       # When the pool reaches this size, and no idle connections are available, calls to getConnection() will block for up to connectionTimeout milliseconds before timing out. Please read about pool sizing. Default: 10
@@ -39,6 +39,6 @@ spring:
   # redis配置
   data:
     redis:
-      url: redis://redis-psd@10.211.55.140:6379
+      url: redis://redis-psd@10.211.55.145:6379
       timeout: 2000
       database: 4
