--- a/unicorn-oauth2/samples-resource-server/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-resource-server/src/main/resources/application.yml
@@ -33,9 +33,9 @@ spring:
 #配置数据源
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:res-server}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-    username: ${DB_USER:root}
-    password: ${DB_PWD:root}
+    url: jdbc:mysql://${DB_HOST:10.211.55.145}:${DB_PORT:}/${DB_NAME:}
+    username: ${DB_USER:}
+    password: ${DB_PWD:}
 
     hikari:
       # When the pool reaches this size, and no idle connections are available, calls to getConnection() will block for up to connectionTimeout milliseconds before timing out. Please read about pool sizing. Default: 10
@@ -60,7 +60,7 @@ spring:
           password: redis-psd
           subscriptionsPerConnection: 5
           clientName: null
-          address: redis://10.211.55.140:6379
+          address: redis://10.211.55.145:6379
           subscriptionConnectionMinimumIdleSize: 2
           subscriptionConnectionPoolSize: 16
           connectionMinimumIdleSize: 8
@@ -73,8 +73,8 @@ spring:
   ##### RabbitMQ ####
   rabbitmq:
     #    RabbitMQ集群，通过addresses配置，多个以逗号分隔(优先取addresses，然后再取host)
-    addresses: 10.211.55.140:5672
-    virtual-host: /eladmin # rabbitmq的虚拟host
+    addresses: 10.211.55.145:5672
+    virtual-host: /unicorn # rabbitmq的虚拟host
     username: admin # rabbitmq的用户名
     password: admin # rabbitmq的密码
     ####开始消费最大重试次数，避免一直重复消费的问题
