--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -88,11 +88,16 @@
             <version>${mapstruct.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>${javassist.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.17</version>
+            <scope>provided</scope>
         </dependency>
         <!--Mockito's inline mock maker supports static mocks based on the Instrumentation API.
         You can simply enable this mock mode, by placing the 'mockito-inline' artifact where you are currently using 'mockito-core'.
