--- a/unicorn-starter/src/main/resources/config/application-dev.yml
+++ b/unicorn-starter/src/main/resources/config/application-dev.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-    username: ${DB_USER:root}
-    password: ${DB_PWD:root}
+    url: jdbc:mysql://${DB_HOST:10.211.55.145}:${DB_PORT:}/${DB_NAME:}
+    username: ${DB_USER:}
+    password: ${DB_PWD:}
 
     hikari:
       ############################################################
@@ -22,7 +22,7 @@ spring:
       # minimum-idle: 5
       # When the pool reaches this size, and no idle connections are available, calls to getConnection() will block for up to connectionTimeout milliseconds before timing out. Please read about pool sizing. Default: 10
       maximum-pool-size: 10
-      pool-name: ValentineCCP
+      pool-name: Unicorn-CCP
       connection-test-query: SELECT 1
 
 
@@ -47,11 +47,11 @@ spring:
           password: redis-psd
           subscriptionsPerConnection: 5
           clientName: null
-          address: redis://10.211.55.140:6379
+          address: redis://10.211.55.145:6379
           subscriptionConnectionMinimumIdleSize: 2
-          subscriptionConnectionPoolSize: 16
-          connectionMinimumIdleSize: 8
-          connectionPoolSize: 16
+          subscriptionConnectionPoolSize: 8
+          connectionMinimumIdleSize: 4
+          connectionPoolSize: 8
           database: 6
           dnsMonitoringInterval: 5000
         codec: !<org.redisson.codec.JsonJacksonCodec> { }
@@ -60,10 +60,10 @@ spring:
   ##### RabbitMQ ####
   rabbitmq:
     #    RabbitMQ集群，通过addresses配置，多个以逗号分隔(优先取addresses，然后再取host)
-    addresses: 10.211.55.140:5672
+    addresses: 10.211.55.145:5672
     #    host: 10.211.55.140 # rabbitmq的连接地址
     #    port: 5672 # rabbitmq的连接端口号
-    virtual-host: /eladmin # rabbitmq的虚拟host
+    virtual-host: /unicorn # rabbitmq的虚拟host
     username: admin # rabbitmq的用户名
     password: admin # rabbitmq的密码
     ####开始消费最大重试次数，避免一直重复消费的问题
