--- a/valentine-starter/src/main/resources/config/application.yml
+++ b/valentine-starter/src/main/resources/config/application.yml
@@ -13,7 +13,7 @@ spring:
   freemarker:
     check-template-location: false
   profiles:
-    active: prod
+    active: dev
   jackson:
     time-zone: GMT+8
   data:
@@ -31,7 +31,7 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: none
-    show-sql: true
+    show-sql: false
   autoconfigure:
     # to use VT, should exclude this
     exclude: org.springframework.boot.autoconfigure.task.TaskExecutionAutoConfiguration
