--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -31,7 +31,7 @@
 
     <properties>
         <java.version>20</java.version>
-        <project.core.version>4.0.1-lambda</project.core.version>
+        <project.core.version>4.0.1-mu</project.core.version>
         <maven.compiler.release>20</maven.compiler.release>
         <lombok.version>1.18.28</lombok.version>
         <mapstruct.version>1.5.4.Final</mapstruct.version>
