--- a/unicorn-code-gen/unicorn-code-gen-kotlin.gradle
+++ b/unicorn-code-gen/unicorn-code-gen-kotlin.gradle
@@ -74,7 +74,7 @@ publishing {
 dependencies {
     api project(':unicorn-core')
     api 'org.springframework.boot:spring-boot-starter-freemarker'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation libs.bundles.coroutines
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
     implementation libs.commons.configuration
