--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -37,7 +37,8 @@
         <mapstruct.version>1.5.4.Final</mapstruct.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <shardingsphere.version>5.2.0</shardingsphere.version>
-        <kotlin.version>1.9.0-RC</kotlin.version>
+        <kotlin.version>1.9.0</kotlin.version>
+        <kotlin-coroutines.version>1.7.2</kotlin-coroutines.version>
     </properties>
 
     <dependencies>
