--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation project(':unicorn-tp-tools-kotlin')
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
     if (kotlinEnable) {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        implementation "org.jetbrains.kotlin:kotlin-stdlib"
         implementation libs.bundles.coroutines
         implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
