--- a/valentine-starter/valentine-starter.gradle
+++ b/valentine-starter/valentine-starter.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
     if (kotlinEnable) {
         implementation "org.jetbrains.kotlin:kotlin-stdlib"
+        implementation 'org.jetbrains.kotlin:kotlin-reflect'
         implementation libs.bundles.coroutines
         implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
