--- a/valentine-starter/src/main/resources/config/application-dev.yml
+++ b/valentine-starter/src/main/resources/config/application-dev.yml
@@ -128,7 +128,7 @@ jwt:
 
 # IP 本地解析
 ip:
-  local-parsing: false
+  local-parsing: true
 
 # ===== SpringDoc配置 ===== #
 springdoc:
@@ -139,7 +139,7 @@ springdoc:
 # ===== 自定义swagger配置 ===== #
 swagger:
   application-name: ${spring.application.name}
-  application-version: 3.3.0
+  application-version: 4.0.0
   application-description: 1101100_1010111_1101111_1001000_1110110_1011001_1100101
   try-host: http://localhost:${server.port}
 
@@ -193,5 +193,6 @@ web:
       - https://*.lwohvye.com
       - https://xxx.com
       - http://localhost:[*]
+      - http://192.168.2.*:[*]
   ssl:
     bundle-name: my-jks-bundle
