--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-springBootVersion=3.1.1
+springBootVersion=3.2.0-M1
 kotlinVersion=1.9.0
 kotlin.experimental.tryK2=true
