--- a/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
@@ -62,8 +62,12 @@ spring:
             - Path=/res/**
           filters:
             - TokenRelay=
+            # 下面这俩的顺序是有影响的，要注意
+            # 剥去一段，/res/some-resource变为/some-resource
             - StripPrefix=1
+            # 添加prefix，从/some-resource变为/api/some-resource
+            - PrefixPath=/api
 
 
 messages:
-  base-uri: http://127.0.0.1:8090/messages
+  base-uri: http://127.0.0.1:8090/api/messages
