--- a/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
@@ -12,6 +12,10 @@ logging:
 spring:
   thymeleaf:
     cache: false
+  # use virtual threads in Spring Boot 3.2 + Java 21
+  threads:
+    virtual:
+      enabled: true
   security:
     oauth2:
       client:
