add support for downstream certificates

--- a/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
@@ -55,6 +55,11 @@ spring:
 
   cloud:
     gateway:
+      httpclient:
+        ssl:
+          # trust all downstream certificates
+          useInsecureTrustManager: true
+          handshake-timeout: 5000ms
       routes:
         - id: resource
           uri: http://localhost:8090
