--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway:$gatewayVersion"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation libs.springdoc.webflux.ui
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation "org.webjars:webjars-locator-core"
     implementation "org.webjars:bootstrap:5.2.3"
