--- a/unicorn-oauth2/samples-default-authorizationserver/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-default-authorizationserver/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     hikari:
       # When the pool reaches this size, and no idle connections are available, calls to getConnection() will block for up to connectionTimeout milliseconds before timing out. Please read about pool sizing. Default: 10
       maximum-pool-size: 10
-      pool-name: Resource-Server
+      pool-name: Authorize-Server
       connection-test-query: SELECT 1
 
   # cache配置
