http://localhost:8080/webjars/swagger-ui/index.html

--- a/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-gateway-client/src/main/resources/application.yml
@@ -94,7 +94,11 @@ springdoc:
   swagger-ui:
     urls:
       - name: security-service
+        display-name: unicorn-security
         url: /v3/api-docs/security
+      - name: gateway
+        display-name: remote-gateway
+        url: /v3/api-docs
   cache:
     disabled: true
 
