--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -1,7 +1,7 @@
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 ext {
-    gatewayVersion = '4.0.4'
+    gatewayVersion = '4.1.0-M1'
 }
 
 dependencies {
